--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,8 @@
 {
   "manifest_version": 2,
-  "name": "VK Music Downloader (beta)",
+  "name": "VK Music Downloader",
   "description": "Download songs and albums on VK.com.",
   "version": "1.0.0.1",
-  "permissions": [ "*://*.vk.com/*" ],
    "icons": {
       "18": "img/18.png",
       "48": "img/48.png",
